# dave

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  LICENSE  Makefile  NEO4J_SETUP_INSTRUCTIONS.md  README.md  SECURITY_AUDIT.md  docker-compose.dev.yml  docker-compose.yml  test_graph_context.py
.claude/: instructions.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  coverage.xml  pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/api/routes/: auth.py  chat.py  conversations.py  dashboard.py  documents.py  english.py  focus.py  health.py  proactive.py  rag.py  tasks.py  vault.py
backend/src/api/schemas/: user.py
backend/src/application/use_cases/: __init__.py  focus_sessions.py  graph_context_retrieval.py  graph_enrichment.py  insights.py  memory_extraction.py  proactive.py  rag_query.py  tasks.py  vault_indexing.py  vault_memory_extraction.py
backend/src/core/: conversation_service.py  english_service.py  models.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  daily_summary.py  document.py  focus_session.py  memory.py  task.py
backend/src/infrastructure/: database.py  github_vault.py  openrouter.py  scheduler.py
backend/src/infrastructure/embeddings/: __init__.py  embedding_service.py
backend/src/infrastructure/graph/: __init__.py  memory_graph_repository.py  models.py  neo4j_client.py
backend/src/infrastructure/vector_store/: __init__.py  chunking.py  document_repository.py  memory_repository.py  qdrant_client.py  result_reranker.py  uploaded_document_repository.py
backend/src/tools/: english_tools.py  vault_tools.py
backend/src/utils/: auth.py  security.py
backend/tests/: conftest.py
backend/tests/unit/: test_auth.py  test_chat.py  test_embedding_service.py  test_english.py  test_health.py  test_memory.py  test_qdrant_client.py  test_rag.py  test_vault.py  test_vault_tools.py
docs/: Architecture.md  Design Questions.md  Development Plan.md  Linting-Setup.md  MARKDOWN_EDITOR_PLAN.md  NEO4J_INTEGRATION.md  PRD - Product Requirements Document.md  Phase 5 - Proactive Features.md  UI-Guidelines.md  User Stories.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/chat/: ChatHistory.tsx  MarkdownMessage.tsx  SourcesPanel.tsx  ToolIndicator.tsx
frontend/src/components/editor/: MarkdownEditor.tsx
frontend/src/components/editor/nodes/: DataviewComponent.tsx  DataviewNode.tsx  HorizontalRuleNode.tsx  ImageNode.tsx  WikiLinkComponent.tsx  WikiLinkNode.tsx
frontend/src/components/editor/plugins/: AIAssistantPlugin.tsx  AutoSavePlugin.tsx  DataviewPlugin.tsx  DragDropImagePlugin.tsx  ExportPlugin.tsx  FindReplacePlugin.tsx  HorizontalRulePlugin.tsx  ImagePlugin.tsx  KeyboardShortcutsPlugin.tsx  LinkPlugin.tsx  MarkdownPlugin.tsx  MentionPlugin.tsx  TablePlugin.tsx  (+5 more)
frontend/src/components/focus/: FocusTimer.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/notifications/: NotificationBell.tsx
frontend/src/components/vault/: CreateNoteModal.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  EnglishProgress.tsx  KnowledgeBase.tsx  LoginPage.tsx  MarkdownEditorPage.tsx  RegisterPage.tsx  VaultBrowser.tsx
frontend/src/services/: api.ts  proactive.ts
frontend/src/stores/: authStore.ts  chatStore.ts
(+1 files in other folders)
