[tool.poetry]
name = "dave-backend"
version = "0.1.0"
description = "Dave - Your AI friend for productivity and English learning"
authors = ["David Buitrago"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.25.2"
structlog = "^23.2.0"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
tenacity = "^8.2.3"
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"
greenlet = "^3.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
ruff = "^0.1.6"
mypy = "^1.7.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.per-file-ignores]
"src/tools/vault_tools.py" = ["E501"]  # Tool definitions have long description strings

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
